using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using Gosu.SystemConfig.Services;

namespace Gosu.Grpc.Client
{
    public static class GrpcCredential
    {
        public static string Username = "";
        public static string RoleID = "";
        public static string AccessToken = "";
        public static string ApiKey = "";
    }
}
