using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using Cores.SystemConfig.Services;

namespace Cores.Common
{
    public static class GrpcCredential
    {
        public static string Username = "";
        public static string RoleID = "admin";
        public static string AccessToken = "";
        public static string ApiKey = "";
    }
}